# project7

./: Autoencoder Work.ipynb  TF Classifier.ipynb  pyproject.toml  requirements.txt
.github/workflows/: pytest.yml
nn/: __init__.py  nn.py  preprocess.py
test/: test.py
